GUAC-1249: Ensure stacking context of login UI fields is explicit (see http://stackoverflow.com/questions/1287439/ie7-z-index-layering-issues).

--- a/guacamole/src/main/webapp/app/login/styles/login.css
+++ b/guacamole/src/main/webapp/app/login/styles/login.css
@@ -62,6 +62,7 @@ div.login-ui {
 .login-ui .login-fields .labeled-field {
     display: block;
     position: relative;
+    z-index: 1;
 }
 
 .login-ui .login-fields .labeled-field .field-header {
